--- a/css/style.css
+++ b/css/style.css
@@ -1,207 +1,162 @@
 *, *:before, *:after {
-  -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
- 
+
+/*background color for sections*/
+.header, .gallery, .education, .skills {
+	background: #f7f7f7;
+}
+
 body {
-  font-size: 16px;
-  font-family: 'Work Sans', sans-serif;
-  font: 100% sans-serif;
-  margin: 0em;
-  background-color: #fff;
-  color: #003a70;
+	font-size: 16px;
+	font: 100% sans-serif;
+	font-family: 'Work Sans', sans-serif;
+	background-color: #ffffff;
+	color: #777777;
+}
+
+/*basic section padding*/
+.education, .skills, .spotlight, .experience, .intro, .gallery, .spotlight {
+	padding: 4em 0;
 }
 
 h1, h2, h3 {
-  font-family: 'Eczar', serif;
-  font-weight: 800;
+	font-family: 'Eczar', serif;
+	font-weight: 800;
 }
 
 a {
-  font-family: 'Work Sans', sans-serif;
-  color: #3d6dbe;
-  text-decoration: none;
+	font-family: 'Work Sans', sans-serif;
+	color: #3d6dbe;
+	text-decoration: none;
+	font-weight: 100;
 }
 
 a:focus,
 a:hover {
-  color: #6594e0;
+	color: #6594e0;
 }
 
 p {
-  font-family: 'Work Sans', sans-serif;
-  font-size: 1.1em;
-  line-height: 1.8;
-  margin-top: 0em;
+	font-family: 'Work Sans', sans-serif;
+	font-size: 1em;
+	line-height: 1.8;
+	font-weight: 100;
 }
 
 img {
-  max-width: 100%;
-}
-
-hr {
-  border-top: 1px solid #ccc;
-  border-bottom: none;
-  margin-top: 3em;
-  margin-bottom: 2em;
+	max-width: 100%;
 }
 
 header {
-  background-color: #999;
-  background-image: url(https://scontent-sin6-1.xx.fbcdn.net/v/t31.0-8/15844391_1823286467883153_6905451085732874679_o.jpg?oh=a84e73694a8adeefca45269ef77b4861&oe=59C27A95);
-  background-repeat: no-repeat;
-  background-position: center center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  margin-bottom: 4em;
-  text-align: center;
-  height: 500px;
- 
+	min-height: 75vh;
+	position: relative;
+}
+
+.header-main {
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	-webkit-transform: translateY(-50%);
+	-moz-transform: translateY(-50%);
 }
 
 header h1 {
-  color: #003a70;
-  font-size: 2em;
-  margin: 0;
-  letter-spacing: 1px;
-  opacity: 1;
-  text-shadow: 2px 2px 7px rgba(255, 255, 255, 0.5);
-  position: relative;
-  top: 370px;
-  font-weight: 700;
-}
-
-header p {
-  color: #fff;
-  font-size: 1.1em;
-  padding-bottom: 1.3em;
-  padding-top: .5em;
-  opacity: .9;
-  position: relative;
-  top: 360px;
+	color: #ff7730;
+	text-transform: uppercase;
+	background-image: -webkit-linear-gradient(to right bottom, #ffb900, #ff7730);
+	background-image: -moz-linear-gradient(to right bottom, #ffb900, #ff7730);
+	background-image: linear-gradient(to right bottom, #ffb900, #ff7730);
+	-webkit-background-clip: text;
+	background-clip: text;
+	-moz-background-clip: text;
+	letter-spacing: 2px;
+	color: transparent;
 }
 
 section h1 {
-  font-size: 1.8em;
-  line-height: 1em;
-  margin-bottom: .6em;
+	font-size: 2em;
+	text-align: left;
+	margin-bottom: 1em;
+	color: #ff7730;
+	text-transform: uppercase;
+	background-image: -webkit-linear-gradient(to right bottom, #ffb900, #ff7730);
+	background-image: -moz-linear-gradient(to right bottom, #ffb900, #ff7730);
+	background-image: linear-gradient(to right bottom, #ffb900, #ff7730);
+	-webkit-background-clip: text;
+	background-clip: text;
+	-moz-background-clip: text;
+	letter-spacing: 2px;
+	color: transparent;
 }
 
 /* Same font-size and line-height as p element */
 section ul li, section ol li {
-  font-size: 1em;
-  margin-left: -10px;
-  line-height: 1.8;
+	font-size: 1em;
+	margin-left: -10px;
+	line-height: 1.8;
 }
 
 footer {
-  margin-bottom: 1em;
-  color: #888;
+	margin-bottom: 1em;
+	color: #888888;
 }
 
 footer hr {
-  margin-top: 2em;
-  margin-bottom: 1em;
+	margin-top: 2em;
+	margin-bottom: 1em;
 }
 
 .center {
-  text-align: center;
-}
-header h1{
-  line-height: 1.6em;
-  max-width: 400px;
-  margin:2px auto;
-  border:2px solid white;
-}
-header p{
-  padding: 0;
-  margin-top: 20px;
-}
-@media screen and (min-width: 50em) {
-  header {
-    height: 700px;
-  }
-  
-  header h1 {
-    font-size: 3.2em;
-    top: 540px;
-  }
-  
-  header p {
-    top: 530px;
-    font-size: 1.5em;
-  }
+	text-align: center;
 }
 
-.main-title{
-  font-weight: 800;
-  border-bottom:0;
-  border-radius: 5px 5px 0 0;
+header h1 {
+	line-height: 1.6em;
 }
-header .sub-title{
-  border: 2px solid;
-  max-width: 280px;
-  margin: 10px auto;
-  border-top: 0;
-  padding-bottom: 4px;
-  border-radius:0 0 5px 5px;
-}
-p.sub-title:before {
-  content: "";
-  width: 62px;
-  top: 0;
-  left: -62px;
-  height: 2px;
-  background: #fff;
-  position: absolute;
-}
-p.sub-title:after {
-  content: "";
-  width: 62px;
-  top: 0;
-  right: -62px;
-  height: 2px;
-  background: #fff;
-  position: absolute;
-}
+
 .skills p {
-  margin: 16px 0 4px 6px;
+	margin: 16px 0 4px 6px;
 }
-.experience h2{
-  margin:8px;
+
+.experience h2 {
+	margin: 8px;
 }
+
 /* ------------------- Grid -------------------*/
 
 .container {
-  max-width: 50em;
-  width:92%;
-  margin-right: auto;
-  margin-left: auto;
+	max-width: 50em;
+	width: 92%;
+	margin-right: auto;
+	margin-left: auto;
 }
 
 .row {
-  clear: both;
-  margin-right: -1%;
-  margin-left:  -1%;
-  
+	clear: both;
+	margin-right: -1%;
+	margin-left: -1%;
 }
 
 .row:before,
 .row:after {
-    content: " "; /* 1 */
-    display: table; /* 2 */
+	content: " "; /* 1 */
+	display: table; /* 2 */
 }
 
 .row:after {
-    clear: both;
+	clear: both;
 }
 
 /**
  * For IE 6/7 only
  */
 .row {
-  *zoom: 1;
+	*zoom: 1;
 }
 
 .grid-1,
@@ -210,20 +165,25 @@ p.sub-title:after {
 .grid-4,
 .grid-5,
 .grid-6 {
-  float: left;
-  width:100%;
-  padding: 0 1%;
-  margin-left: auto;
-  margin-right: auto;
+	float: left;
+	width: 100%;
+	padding: 0 1%;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 @media screen and (min-width: 40em) {
-  .grid-1 { width: 16.6666666%; }
-  .grid-2 { width: 33.3333333%; }
-  .grid-3 { width: 50%; }
-  .grid-4 { width: 66.6666666%; }
-  .grid-5 { width: 83.3333333%; }
-  .grid-6 { width: 100%; }
+	.grid-1 { width: 16.6666666%; }
+
+	.grid-2 { width: 33.3333333%; }
+
+	.grid-3 { width: 50%; }
+
+	.grid-4 { width: 66.6666666%; }
+
+	.grid-5 { width: 83.3333333%; }
+
+	.grid-6 { width: 100%; }
 
 }
 
@@ -231,169 +191,131 @@ p.sub-title:after {
 
 /* Gallery */
 
-.gallery [class*="grid-2"], .gallery [class*="grid-3"]  {
-  margin-bottom: 1%;
-  margin-top: 1%;
-  width: 50%;
+.gallery [class*="grid-2"], .gallery [class*="grid-3"] {
+	margin-bottom: 1%;
+	margin-top: 1%;
+	width: 50%;
 }
 
 .gallery a img {
-  -webkit-transform: translateZ(0); /* Fix chrome pixel shift */
-  transition: opacity .2s ease;
-  opacity: 1;
-  max-width: 300px;
-  height: 200px;
-  padding: 15px;
+	-webkit-transform: translateZ(0); /* Fix chrome pixel shift */
+	transition: opacity .2s ease;
+	opacity: 1;
+	max-width: 300px;
+	height: 200px;
+	padding: 15px;
 }
 
 .gallery a img:hover {
-  opacity: .8;
+	opacity: .8;
 }
 
 @media screen and (min-width: 40em) {
-  .gallery .grid-2 {
-    width: 33.3333333%;
-  }
+	.gallery .grid-2 {
+		width: 33.3333333%;
+	}
 }
-
 
 /* Experience */
 .experience [class*="row"] {
-  border-bottom: dotted 1px #ccc;
-  padding-top: 1em;
-  padding-bottom: 1em;
+	border-bottom: dotted 1px #cccccc;
+	padding-top: 1em;
+	padding-bottom: 1em;
 }
 
 .experience h2 {
-  margin-bottom: 0;
+	margin-bottom: 0;
 }
 
 .experience h2, .experience p {
-  text-align: center;
+	text-align: center;
 }
 
 .experience [class*="row"]:last-of-type {
-  border: none;
+	border: none;
 }
 
 @media screen and (min-width: 40em) {
-  .experience h2, .experience p {
-    text-align: left;
-  }
+	.experience h2, .experience p {
+		text-align: left;
+	}
 }
-
 
 /* Education Block */
 .education {
-  font-family: 'Work Sans', sans-serif;
-  line-height: 1.5;
-  margin-bottom: 0;
-}
-
-@media screen and (min-width: 40em) {
-  .education {
-    width: 70%;
-  }
-}
-
-
-/* Testimonials */
-.testimonial {
-  text-align: center;
-  margin-bottom: 30px;
-}
-
-.testimonial img {
-  height: 4em;
-  border-radius: 3px;
-  margin-left: auto;
-  margin-right: auto;
-  display: block;
-  margin-top: 40px;
-}
-
-.testimonial p {
-  font-style: italic;
-  color: #888;
-  margin-top:  -15px;
+	font-family: 'Work Sans', sans-serif;
+	margin-bottom: 0;
 }
 
 /* Spotlight */
-.spotlight {
-  background-color: #e8e8e8;
-  padding: 3em 1em;
-  margin-top: 3em;
-  margin-bottom: 3em;
-  text-align: center;
+
+.spotlight__sub-title {
+	margin: 1em 0;
+	line-height: 1.6em;
 }
 
 .spotlight img {
-  margin-left: auto;
-  margin-right: auto;
-  display: block;
-  border: 5px solid #fff;
-  border-radius: 5px;
-}
-
-.spotlight h1 {
-  color: #003a70;
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
+	border: 5px solid #ffffff;
+	border-radius: 5px;
 }
 
 .spotlight p {
-  color: #6d5e53;
-  font-size: 1.1em;
+	color: #6d5e53;
+	font-size: 1.1em;
 }
 
 .spotlight a {
-  background-color: transparent;
-  border: 3px solid #003a70;
-  padding: 7px 35px;
-  border-radius: 3px;
-  color: #003a70;
-  font-size: 1.1em;
-  opacity: .8;
-  margin-bottom: 10px;
+	background-color: transparent;
+	border: 3px solid #777777;
+	padding: 7px 35px;
+	border-radius: 3px;
+	display: inline-block;
+	margin-top: 20px;
 }
 
 .spotlight a:hover {
-  opacity: 1;
-  cursor: pointer;
+	opacity: 1;
+	cursor: pointer;
 }
 
 @media screen and (min-width: 40em) {
-  .spotlight {
-    padding: 6em;
-    text-align: left;
-  }
-  
-  .spotlight h1, .spotlight p {
-    text-align: left;
-  }
-  
-}
-.progress {
-  background: rgb(242, 169, 0);
-  border-radius: 25px;
-  height: 28px;
-}
-.progress-bar-custom {
-  display: block;
-  height: 28px;
-  border-radius: 25px 0 0 25px;
-  background-color:#003a70;
-}
-.progress-inverse{
-  background-color:#003a70;
+
+	.spotlight h1, .spotlight p {
+		text-align: left;
+	}
+
 }
 
-.progress-inverse .progress-bar-custom{
-  background: rgb(242, 169, 0);
+.progress {
+	background: #ff7730;
+	border-radius: 25px;
+	height: 28px;
 }
-footer{
-  margin-top:60px;
+
+.progress-bar-custom {
+	display: block;
+	height: 28px;
+	border-radius: 25px 0 0 25px;
+	background-color: #ffb900;
 }
-footer .copy-right{
-  font-family: 'Eczar', serif;
-  text-decoration: underline;
-  color: #6d6868;
+
+.progress-inverse {
+	background-color: #ffb900;
+}
+
+.progress-inverse .progress-bar-custom {
+	background: #ff7730;
+}
+
+footer {
+	margin-top: 60px;
+}
+
+footer .copy-right {
+	font-family: 'Eczar', serif;
+	text-decoration: underline;
+	color: #6d6868;
 }
