--- a/css/style.css
+++ b/css/style.css
@@ -319,3 +319,16 @@ footer .copy-right {
 	text-decoration: underline;
 	color: #6d6868;
 }
+
+/*utilities*/
+
+.sr-only {
+	position: absolute;
+	width: 1px;
+	height: 1px;
+	padding: 0;
+	margin: -1px;
+	overflow: hidden;
+	clip: rect(0,0,0,0);
+	border: 0;
+}
