--- a/css/style.css
+++ b/css/style.css
@@ -8,18 +8,28 @@
 
 /*background color for sections*/
 .header, .gallery, .education, .skills {
-	background: #f7f7f7;
-	-webkit-box-shadow: 0 0 8px -2px #c2c2c2;
-	-moz-box-shadow: 0 0 8px -2px #c2c2c2;
-	box-shadow: 0 0 8px -2px #c2c2c2;
+	background: #45535B;
+	/*-webkit-box-shadow: 0 0 8px -2px #c2c2c2;*/
+	/*-moz-box-shadow: 0 0 8px -2px #c2c2c2;*/
+	/*box-shadow: 0 0 8px -2px #c2c2c2;*/
+	color:#4BC0A9;
 }
 
+/*basic colors*/
+
+.color-light{
+color:#fff;
+}
+
+.color-primary{
+	color:#4BC0A9;
+}
 body {
 	font-size: 16px;
 	font: 100% sans-serif;
 	font-family: 'Work Sans', sans-serif;
 	background-color: #ffffff;
-	color: #777777;
+	color: #5a5858;
 }
 
 /*basic section padding*/
@@ -34,21 +44,21 @@ h1, h2, h3 {
 
 a {
 	font-family: 'Work Sans', sans-serif;
-	color: #3d6dbe;
+	color: #4BC0A9;
 	text-decoration: none;
-	font-weight: 100;
+	font-weight: 300;
 }
 
 a:focus,
 a:hover {
-	color: #6594e0;
+	color: #4BC0A9;
 }
 
 p {
 	font-family: 'Work Sans', sans-serif;
 	font-size: 1em;
 	line-height: 1.8;
-	font-weight: 100;
+	font-weight: 300;
 }
 
 img {
@@ -316,8 +326,7 @@ footer hr {
 	margin-left: auto;
 	margin-right: auto;
 	display: block;
-	border: 5px solid #ffffff;
-	border-radius: 5px;
+	box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.4);
 }
 
 .spotlight p {
@@ -327,7 +336,7 @@ footer hr {
 
 .spotlight a {
 	background-color: transparent;
-	border: 3px solid #777777;
+	border: 3px solid #4BC0A9;
 	padding: 7px 35px;
 	border-radius: 3px;
 	display: inline-block;
@@ -357,11 +366,11 @@ footer hr {
 	display: block;
 	height: 28px;
 	border-radius: 25px 0 0 25px;
-	background-color: #ffb900;
+	background-color: #FED35E;
 }
 
 .progress-inverse {
-	background-color: #ffb900;
+	background-color: #FED35E;
 }
 
 .progress-inverse .progress-bar-custom {
